[package]
name = "rust_rest_api"
version = "0.1.0"
edition = "2021"


[dependencies]
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.8"
lazy_static = "1.4"
actix-web = "4.9.0"
utoipa = "4.2.3"
utoipa-swagger-ui = { version = "7", features = ["actix-web"] }



